--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
   "name": "electron-update-logic",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "dependencies": {},
+  "devDependencies": {
+    "typescript": "^4.5.2"
+  }
 }
