--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rm -rf dist",
     "prepack": "tsc",
     "prettier:check": "prettier --list-different .",
-    "prettier:fix": "prettier --write ."
+    "prettier:fix": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "@types/semver": "^7.3.9",
@@ -20,7 +21,11 @@
     "semver": "^7.3.5"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
 }
