--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "sourceMap": true,
     "strict": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["**/*.(test|spec).ts"]
 }
