--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
+    "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.4",
+    "@types/koa-router": "^7.4.4",
     "jest": "^27.3.1",
+    "jest-mock-server": "^0.0.5",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.2"
   }
 }
