--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "tsdef": "^0.0.14"
   },
   "optionalDependencies": {
-    "axios": "^0.24.0",
-    "node-fetch": "^3.1.0"
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
